# halDeckPWA

./: .env.example  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
src/: app.html  deckconfig.toml.example
src-cpp/: .clang-format  CMakeLists.txt
src-cpp/include/: com.h  cpplib.h  get_exe_path.h
src-cpp/src/: com.cpp  cpplib.cpp  get_exe_path.cpp  main.cpp  set_volume.cpp
src-cs/: ListupVirtualDesktops.csx  SendKeyScript.csx  global.json  halDeckPWA.sln
src-cs/ListupVirtualDesktops/: ListupVirtualDesktops.csproj  Program.cs  app.manifest
src-cs/lib/VirtualDesktop/src/VirtualDesktop/Interop/: ComInterfaceAssemblyBuilder.cs
src/lib/: get-active-window-pid.ts  get-virtual-desktops.ts  tap-key.ts
src/lib/components/: BgCanvas.svelte
src/lib/shaders/: bg_bubbles.frag
src/routes/: +page.svelte
src/routes/api/app/launch/[app]/: +server.ts
src/routes/api/app/open/[app]/: +server.ts
src/routes/api/clipboard/receive/: +server.ts
src/routes/api/clipboard/send/: +server.ts
src/routes/api/desktop/: +server.ts
src/routes/api/desktop/[name]/: +server.ts
src/routes/api/desktop/[title]/: +server.ts
src/routes/api/desktop/pin-active/: +server.ts
src/routes/api/desktop/switch/[name]/: +server.ts
src/routes/api/desktop/unpin-active/: +server.ts
src/routes/api/emoji/: +server.ts
src/routes/api/lighthouse/[type]/: +server.ts
src/routes/api/media/mute/: +server.ts
src/routes/api/media/next-track/: +server.ts
src/routes/api/media/play-pause/: +server.ts
src/routes/api/media/prev-track/: +server.ts
src/routes/api/media/totalmixfx/volume/: +server.ts
src/routes/api/media/volume/: +server.ts
src/routes/api/system/[...args]/: +server.ts
src/routes/api/system/restart/: +server.ts
src/routes/api/system/shutdown/: +server.ts
src/routes/api/system/sleep/: +server.ts
src/server/: osc.ts
static/: manifest.json
